--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@ Created by Stepan Pesout
 	<meta property="fb:admins" content="100001802478636">
 	<meta property="og:title" content="Elevasis Project">
 	<meta property="og:site_name" content="Elevasis is an app for drawing graphs from GPS data">
-	<meta property="og:description" content="KRATŠÍ POPIS">
+	<meta property="og:description" content="Elevasis is an app for drawing graphs from GPS data">
 	<link rel="author" href="http://github.com/pesout">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 
 <body onload="drawAxis();">
 	<header>
-		<h1>Elevasis Project (in development)<h1>
+		<h1>Elevasis Project (development suspended)<h1>
 	</header>
 
 	<button onclick="startStop();" id="start">start</button>
